<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/zw"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_loginname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/TextView10" />

    <EditText
        android:id="@+id/edit_loginpasword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/TextView11"
        android:password="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@mipmap/aa"
            android:text="@string/Buttn4"
            android:textColor="#ff0000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@mipmap/aa"
            android:text="@string/Buttn2"
            android:textColor="#ff0000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@mipmap/aa"
            android:text="@string/Buttn3"
            android:textColor="#ff0000"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>